--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,17 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2      
+
+      - name: enable beta channel
+        uses: steebchen/flutter@v1.1.0
+        with:
+          args: channel beta
+      
+      - name: update SDK
+        uses: steebchen/flutter@v1.1.0
+        with:
+          args: upgrade
         
       - name: install deps
         uses: steebchen/flutter@v1.1.0
